--- a/src/app/video/manage/manage.component.html
+++ b/src/app/video/manage/manage.component.html
@@ -25,18 +25,21 @@
       class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary flex flex-col justify-start"
     >
       <!-- Image -->
-      <a href="#">
+      <a [routerLink]="['/', 'clip', clip.docID]">
         <img
           class="card-img-top rounded-tl-2xl w-full"
-          src="assets/img/1.jpg"
+          [src]="clip.screenshotURL"
+          crossorigin
         />
       </a>
 
       <!-- Body -->
       <div class="p-6 text-2xl">
         <!-- Link -->
-        <a href="#" class="font-bold mb-2"> {{ clip.title }}</a>
-        <a
+        <a [routerLink]="['/', 'clip', clip.docID]" class="font-bold mb-2">
+          {{ clip.title }}</a
+        >
+        <a (click)="copyToClipboard($event, clip.docID)"
           href="#"
           class="bg-gray-400 text-white px-2 py-1 ml-2 text-sm rounded"
         >
@@ -54,7 +57,7 @@
           <span class="material-icons text-base">build</span>
         </a>
         <a
-        (click)="deleteClip($event, clip)"
+          (click)="deleteClip($event, clip)"
           href="#"
           class="flex-1 p-2 rounded-br-2xl transition hover:text-indigo-400"
         >
